...
  FlatList,
  StatusBar,
  Pressable
} from "react-native";
import { Link, useLocalSearchParams, useRouter } from "expo-router";
import { globalStyles } from "@/components/common/GlobalStyles";
import { useBookmarkRecipe, useRecipeDetail } from "@/api/recipe";
import { Image } from "expo-image";
import BackButton from "@/components/BackButton";
import Vote from "@/components/common/Vote";
import { Entypo, Feather } from "@expo/vector-icons";
import Bookmark from "@/components/common/Bookmark";
import { Suspense, useCallback, useEffect, useMemo, useRef, useState } from "react";
...
                    </View>

                    <View className='h-[1px] w-full bg-primary'></View>

                    <View
                      className='justify-center gap-4'
                      testID='comment-section'
                    >
                      <Text className='base-semibold text-black_white'>
                        {t("comment")}
                      </Text>
                      <AddCommentSection
                        recipeId={id}
...
