{
  "cookButton": "Nấu",
  "follower": "người theo dõi",
  "followers": "người theo dõi",
  "ingredient": "Nguyên liệu",
  "step": "Bước thực hiện",
  "for": "Cho",
  "serving": "khẩu phần ăn",
  "servings": "khẩu phần ăn",
  "comment": "Bình luận",
  "addComment": "Thêm bình luận...",
  "loadMoreComment": "Tải thêm bình luận",
  "similarRecipes": "Công thức tương tự",
  "commentLimit": "Bình luận phải ít hơn 500 ký tự"
}
