import { useRecipeSteps } from "@/api/recipe";
import BackButton from "@/components/BackButton";
import { globalStyles } from "@/components/common/GlobalStyles";
import Slider from "@/components/screen/community/Slider";
import Step from "@/components/screen/community/Step";
import { colors } from "@/constants/colors";
import useColorizer from "@/hooks/useColorizer";
...
                    color={c(black.DEFAULT, white.DEFAULT)}
                  />
                  <Text className='base-semibold text-black_white'>
                    {t("voiceCommand")}
                  </Text>
                  <Switch
                    testID='active-voice-switch'
                    trackColor={{ false: `${inactiveTrackColor}`, true: `${primary}` }}
                    thumbColor={isActiveVoiceCommand ? `${thumbColor}` : `${thumbColor}`}
                    onValueChange={handleToggleVoiceCommand}
                    value={isActiveVoiceCommand}
                  />
                </View>
...
                    name='account-tie-voice-outline'
                    size={22}
                    color={c(black.DEFAULT, white.DEFAULT)}
                  />
                  <Text className='base-semibold text-black_white'>{t("speaking")}</Text>
                  <Switch
                    testID='active-speaking-switch'
                    trackColor={{ false: `${inactiveTrackColor}`, true: `${primary}` }}
                    thumbColor={isActiveSpeaking ? `${thumbColor}` : `${thumbColor}`}
                    onValueChange={handleToggleSpeaking}
                    value={isActiveSpeaking}
                  />
                </View>
...
            </View>

            {/* Navigate buttons */}
            <View className='flex-center mb-4 flex-row gap-4 px-4'>
              <TouchableWithoutFeedback
                onPress={handleBack}
                testID='cooking-back-button'
              >
                <View className='flex-center flex-1 rounded-3xl bg-gray-400 px-5 py-3'>
                  <Text className='body-semibold text-black'>{t("back")}</Text>
                </View>
              </TouchableWithoutFeedback>
              <TouchableWithoutFeedback
                onPress={handleNext}
                testID='cooking-next-button'
              >
                <View className='flex-center flex-1 rounded-3xl bg-primary px-5 py-3'>
                  <Text className='body-semibold text-white_black'>{t("next")}</Text>
                </View>
              </TouchableWithoutFeedback>
            </View>
...
