export enum LANGUAGES {
  VIETNAMESE = "Vietnamese",
  ENGLISH = "English"
}

export enum LANGUAGE_CODES {
  VI = "vi",
  EN = "en"
}

export const languageMap = {
  vi: "Vietnamese",
  en: "English"
};
