{
  "voiceCommand": "Điều khiển bằng giọng nói",
  "speaking": "Đọc các bước nấu ăn",
  "ok": "Ok",
  "cancel": "Huỷ",
  "commandVoiceTitle": "Điều khiển bằng giọng nói",
  "commandVoiceMessage": "Bạn có thể nói 'tiếp theo', 'trở lại' để di chuyển giữa các bước. 'Dừng điều khiển' để tắt chế độ điều khiển bằng giọng nói.",
  "step": "Bước",
  "back": "Trở lại",
  "next": "Tiếp theo",
  "net": "Tiếp theo",
  "repeat": "Đọc lại",
  "stop": "Dừng điều khiển",
  "english": "Tiếng Anh",
  "vietnamese": "Tiếng Việt",
  "titleChangeLanguage": "Ngôn ngữ thiết bị và công thức hiện đang khác nhau",
  "descriptionChangeLanguage": "Bạn muốn nghe bằng ngôn ngữ nào?"
}
