...

          <Animated.View className='mt-[20vh] flex gap-3.5'>
            <Animated.Text
              style={textStyles[0]}
              className='font-bold text-6xl text-black'
            >
              Welcome to
            </Animated.Text>

            <Animated.Text
              style={textStyles[1]}
              className='font-bold text-5xl text-primary'
            >
              Tastopia
            </Animated.Text>

            <Animated.Text
              style={textStyles[2]}
              className='font-sans text-xl text-white'
            >
...
