{
  "profile": "Profile",
  "saved": "Bookmark",
  "premium": "Premium",
  "deleted": "Deleted",
  "restore": "Restore",
  "restoreSuccessfully": "Restore recipe successfully!",
  "restoreFailed": "Restore recipe failed!",
  "settings": "Settings",
  "history": "History",
  "viewAll": "View all",
  "noHistory": "You haven't checked out any recipe yet.",
  "loginToViewHistory": "Please log in to see recipe viewing history",
  "logout": "Log out",
  "backToLogin": "Back to login"
}
