...
        placeholderTextColor={"gray"}
        onChangeText={setComment}
        editable={!isLoading}
        onSubmitEditing={handleOnSubmit}
        returnKeyType='send'
        multiline={true}
        testID='recipe-comment-input'
      />

      {comment.trim() !== "" && (
        <TouchableWithoutFeedback
          testID='submit-comment-button'
          onPress={handleOnSubmit}
          disabled={isLoading}
        >
          {isLoading ? (
            <ActivityIndicator
              animating={isLoading}
...
