...
  ActivityIndicator
} from "react-native";
import { filterUniqueItems } from "@/utils/dataFilter";
import { router } from "expo-router";
import useColorizer from "@/hooks/useColorizer";
import { colors } from "@/constants/colors";
import { useRecipesFeed } from "@/api/recipe";
import BottomSheet from "@gorhom/bottom-sheet";
import SettingRecipe from "@/components/common/SettingRecipe";
import { ROLE, selectRole } from "@/slices/auth.slice";
import { usePushNotification } from "@/hooks";
import { selectSetting } from "@/slices/setting.slice";
import { changeLanguage } from "@/utils/language";
import { getBooleanValueFromSetting } from "@/utils/converter";
import { RecipeType } from "@/types/recipe";
import { selectIsActiveUser } from "@/slices/user.slice";
import { useTranslation } from "react-i18next";

const Community = () => {
  const { c } = useColorizer();
  const { black, white } = colors;
  const { t } = useTranslation("component");
  const isActiveUser = selectIsActiveUser();

  const isFirstRender = useRef(true);
...
