...
            <Feather
              name='search'
              size={20}
              color={c(black.DEFAULT, white.DEFAULT)}
            />
            <TextInput
              testID='search-recipe-input'
              autoCapitalize='none'
              ref={textInputRef}
              className='h-full w-[86%]'
              style={{ color: c(black.DEFAULT, white.DEFAULT) }}
              value={searchValue}
              onPress={() => handleFocus(true)}
...
