appId: com.tastopia.app
onFlowStart:
  - runFlow:
      file: ../common/login.yaml
      env:
        TEST_NAME: "cooking-mode"
onFlowComplete:
  - runFlow: ../common/logout.yaml
---
- assertVisible: "Community"
- tapOn:
    id: "COMMUNITY"
- tapOn:
    id: "recipe"
    index: 0
- tapOn:
    id: "recipe-cook-button"
- tapOn:
    id: "active-speaking-switch"
- runFlow:
    when:
      visible: "English"
    commands:
      - tapOn: "English"
- runFlow:
    when:
      visible: "Tiếng Anh"
    commands:
      - tapOn: "Tiếng Anh"
- tapOn:
    id: "active-speaking-switch"
- tapOn:
    id: "cooking-next-button"
- tapOn:
    id: "cooking-back-button"
