appId: com.tastopia.app
onFlowStart:
  - runFlow:
      file: ../common/login.yaml
      env:
        TEST_NAME: "search-recipe"
onFlowComplete:
  - runFlow: ../common/logout.yaml
---
- tapOn:
    id: "SEARCH"
- tapOn:
    id: "search-recipe-input"
- inputText: "a"
- hideKeyboard
- extendedWaitUntil:
    visible:
      id: "search-recipe-item"
    timeout: 10000
